[gd_scene load_steps=5 format=2]

[ext_resource path="res://Fonts/PixelMechaBold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Fonts/TitleScreenFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://ContinueNextDay/ContinueDay.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[node name="TitleMenu" type="MarginContainer"]
pause_mode = 2
margin_right = 320.0
margin_bottom = 180.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 320.0
margin_bottom = 180.0
color = Color( 1, 0.686275, 0.239216, 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 320.0
margin_bottom = 180.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 89.0
margin_top = 21.0
margin_right = 231.0
margin_bottom = 159.0
custom_constants/separation = 3

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 142.0
margin_bottom = 30.0

[node name="GameLabel" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer"]
margin_left = 5.0
margin_right = 137.0
margin_bottom = 30.0
rect_min_size = Vector2( 100, 25 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Day Ended "
align = 1

[node name="CenterContainer3" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 33.0
margin_right = 142.0
margin_bottom = 48.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer3"]
margin_left = 42.0
margin_right = 100.0
margin_bottom = 15.0

[node name="DiamondLabel" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer3/HBoxContainer"]
margin_right = 58.0
margin_bottom = 15.0
rect_min_size = Vector2( 58, 0 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )

[node name="CenterContainer4" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 51.0
margin_right = 142.0
margin_bottom = 66.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer4"]
margin_left = 42.0
margin_right = 100.0
margin_bottom = 15.0

[node name="EmeraldLabel" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer4/HBoxContainer"]
margin_right = 58.0
margin_bottom = 15.0
rect_min_size = Vector2( 58, 0 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )

[node name="CenterContainer5" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 69.0
margin_right = 142.0
margin_bottom = 84.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer5"]
margin_left = 42.0
margin_right = 100.0
margin_bottom = 15.0

[node name="RubyLabel" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer5/HBoxContainer"]
margin_right = 58.0
margin_bottom = 15.0
rect_min_size = Vector2( 58, 0 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )

[node name="CenterContainer6" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 87.0
margin_right = 142.0
margin_bottom = 102.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer6"]
margin_left = 42.0
margin_right = 100.0
margin_bottom = 15.0

[node name="AmethystsLabel" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer6/HBoxContainer"]
margin_right = 58.0
margin_bottom = 15.0
rect_min_size = Vector2( 58, 0 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )

[node name="CenterContainer7" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 105.0
margin_right = 142.0
margin_bottom = 120.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer7"]
margin_left = 42.0
margin_right = 100.0
margin_bottom = 15.0

[node name="SapphiresLabel" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer7/HBoxContainer"]
margin_right = 58.0
margin_bottom = 15.0
rect_min_size = Vector2( 58, 0 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 123.0
margin_right = 142.0
margin_bottom = 138.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2"]
margin_right = 142.0
margin_bottom = 15.0

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_right = 142.0
margin_bottom = 15.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2"]
margin_right = 142.0
margin_bottom = 15.0

[node name="Selector" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2/HBoxContainer"]
margin_right = 8.0
margin_bottom = 15.0
rect_min_size = Vector2( 8, 0 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = ">"

[node name="ContinueLabel" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2/HBoxContainer"]
margin_left = 12.0
margin_right = 142.0
margin_bottom = 15.0
rect_min_size = Vector2( 58, 0 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Continue To Next Day"

[node name="ContinueButton" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2/HBoxContainer/ContinueLabel"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = -0.207
anchor_right = 1.086
anchor_bottom = 0.933
margin_left = -0.229977
margin_right = -0.223991
margin_bottom = 6.005
rect_scale = Vector2( 1, 0.7 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2/HBoxContainer/ContinueLabel/ContinueButton" to="." method="_on_ContinueButton_pressed"]
